# arbi_server

./: .gitignore  Cargo.toml  README  env_base
prompt/: arbi_server_error.txt  arbi_server_message.txt  arbit_server_rust_files_content.txt  concatenar_rs_files.sh
src/: main.rs  router.rs
src/db/: mongodb.rs
src/middleware/: auth_middleware.rs
src/modules/: mod.rs
src/modules/account/: account_controller.rs  account_service.rs  mod.rs
src/modules/arbitrage_strategy/: arbitrage_strategy_controller.rs  arbitrage_strategy_schema.rs  arbitrage_strategy_service.rs  mod.rs  suggested_arbitrage_strategy_controller.rs  suggested_arbitrage_strategy_service.rs
src/modules/asset/: asset_controller.rs  asset_schema.rs  asset_service.rs  mod.rs
src/modules/auth/: auth_controller.rs  auth_model.rs  auth_response.rs  auth_service.rs  mod.rs
src/modules/exchange/: exchange_controller.rs  exchange_schema.rs  exchange_service.rs  mod.rs
src/modules/market_pair/: market_pair_controller.rs  market_pair_schema.rs  market_pair_service.rs  mod.rs
src/modules/user/: mod.rs  user_schema.rs
