[package]
name = "arbi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
